# cookiecutter-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .bandit  .codeclimate.yml  .coveragerc  .editorconfig  .style.yapf  CHANGELOG.md  LICENSE  Makefile  pre-commit-config.yaml  pyproject.toml  pytest.ini  tox.ini
