[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "*"
coveragespace = "*"
cruft = "*"
hypothesis = "*"
isort = "*"
portray = "*"
pytest = "*"
pytest-check = "*"
pytest-cov = "*"
pytest-mock = "*"
mypy = "*"
safety = "*"
tox = "*"
typing = "*"
vulture = "*"
yapf = "*"

[tool.isort]
line_length = 88
known_standard_library = ["StringIO"]
known_test = ["pytest"]
known_first_party = ["{{cookiecutter.project_name}}"]
multi_line_output = 3
use_parentheses = true
combine_as_imports = true

# https://mypy.readthedocs.io/en/latest/config_file.html
[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "normal"
show_error_codes = true
pretty = true

[tool.pytest]
bdd_features_base_dir = "tests/features/"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
